--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  
+
   <div id="overplays"></div>
   <div id="root"></div>
   <!--
@@ -42,6 +42,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script>
+    $(document).ready(function () {
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
